--- a/printerform/package.json
+++ b/printerform/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-color": "^3.0.12",
     "next": "14.2.3",
     "react": "^18",
+    "react-color": "^2.19.3",
     "react-dom": "^18",
     "react-stl-viewer": "^2.5.0",
     "three": "^0.164.1"
