--- a/printerform/package.json
+++ b/printerform/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.107.0",
     "@types/react-color": "^3.0.12",
     "next": "14.2.3",
     "react": "^18",
