--- a/printerform/package.json
+++ b/printerform/package.json
@@ -15,8 +15,8 @@
     "react": "^18",
     "react-color": "^2.19.3",
     "react-dom": "^18",
-    "react-stl-viewer": "^2.5.0",
-    "three": "^0.164.1"
+    "three": "^0.164.1",
+    "three-stdlib": "^2.32.2"
   },
   "devDependencies": {
     "@types/node": "^20",
