--- a/printerform/package.json
+++ b/printerform/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^9.107.0",
     "@types/react-color": "^3.0.12",
+    "jspdf": "^2.5.2",
     "next": "14.2.3",
     "react": "^18",
     "react-color": "^2.19.3",
