--- a/printerform/package.json
+++ b/printerform/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-three/drei": "^9.107.0",
+    "@react-three/fiber": "^8.17.9",
     "@types/react-color": "^3.0.12",
     "next": "14.2.3",
     "react": "^18",
