--- a/printerform/package.json
+++ b/printerform/package.json
@@ -2,13 +2,13 @@
   "name": "printerform",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://printerform1.github.io/integrate",
+  "homepage": "https://printerform1.github.io/printerForm1.0/",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export",
+    "export": "next build",
     "predeploy": "npm run export",
     "deploy": "gh-pages -d out"
   },
