--- a/printerform/package.json
+++ b/printerform/package.json
@@ -2,7 +2,7 @@
   "name": "printerform",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://printerform1.github.io/printerForm1.0/",
+  "homepage": "https://printerform1.github.io/printerForm1.0",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
